# Advanced-CPP-Graphics

./: CMakeLists.txt
include/: Errors.h  GLSLProgram.h  IOManager.h  ImageLoader.h  MainGame.h  OpenGLTexture.h  Sprite.h  Vertex.h  picoPNG.h
shaders/: ColorShading.frag  ColorShading.vert
src/: Errors.cpp  GLSLProgram.cpp  IOManager.cpp  ImageLoader.cpp  MainGame.cpp  Sprite.cpp  main.cpp  picoPNG.cpp
